--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/fnts
 spring.datasource.username=postgres
 spring.datasource.password=este0927
 spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=truex
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=truex
