Ultimo commit modificando el application.properties colocando la conexion a la bd desplegada en PDN y en application.java se modifico de acuerdo a la documentacion de fl0 para poder desplegarlo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,22 @@
+#PDN-----------------------------------------
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/fnts
-spring.datasource.username=postgres
-spring.datasource.password=este0927
+spring.datasource.url=jdbc:postgresql://ep-delicate-wildflower-06706259.us-east-2.aws.neon.fl0.io:5432/fntsDatabase
+spring.datasource.username=fl0user
+spring.datasource.password=xCVmdj86Utob
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=truex
+
+#DEVELOP-----------------------------------
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/fnts
+#spring.datasource.username=postgres
+#spring.datasource.password=este0927
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=truex
